@@ -139,6 +139,30 @@ block|}
 argument_list|)
 decl_stmt|;
 specifier|private
+specifier|static
+specifier|final
+name|Collection
+name|DIRMODE_VALUES
+init|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+name|RetrieveOptions
+operator|.
+name|DIRMODE_FLAT
+block|,
+name|RetrieveOptions
+operator|.
+name|DIRMODE_TREE
+block|}
+argument_list|)
+decl_stmt|;
+specifier|private
 name|String
 name|pattern
 decl_stmt|;
@@ -167,6 +191,14 @@ init|=
 name|RetrieveOptions
 operator|.
 name|OVERWRITEMODE_NEWER
+decl_stmt|;
+specifier|private
+name|String
+name|dirMode
+init|=
+name|RetrieveOptions
+operator|.
+name|DIRMODE_FLAT
 decl_stmt|;
 specifier|public
 name|String
@@ -306,6 +338,12 @@ operator|.
 name|setOverwriteMode
 argument_list|(
 name|getOverwriteMode
+argument_list|()
+argument_list|)
+operator|.
+name|setDirMode
+argument_list|(
+name|getDirMode
 argument_list|()
 argument_list|)
 operator|.
@@ -527,6 +565,57 @@ parameter_list|()
 block|{
 return|return
 name|overwriteMode
+return|;
+block|}
+specifier|public
+name|void
+name|setDirMode
+parameter_list|(
+name|String
+name|dirMode
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|DIRMODE_VALUES
+operator|.
+name|contains
+argument_list|(
+name|dirMode
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"invalid dirMode value '"
+operator|+
+name|dirMode
+operator|+
+literal|"'. "
+operator|+
+literal|"Valid values are "
+operator|+
+name|DIRMODE_VALUES
+argument_list|)
+throw|;
+block|}
+name|this
+operator|.
+name|dirMode
+operator|=
+name|dirMode
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getDirMode
+parameter_list|()
+block|{
+return|return
+name|dirMode
 return|;
 block|}
 block|}
