@@ -2137,7 +2137,24 @@ comment|// skip this artifact, the filter didn't accept it!
 block|}
 name|String
 name|destFileName
-init|=
+decl_stmt|;
+if|if
+condition|(
+name|RetrieveOptions
+operator|.
+name|DIRMODE_FLAT
+operator|.
+name|equals
+argument_list|(
+name|options
+operator|.
+name|getDirMode
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|destFileName
+operator|=
 name|IvyPatternHelper
 operator|.
 name|substitute
@@ -2164,7 +2181,135 @@ operator|.
 name|getArtifactOrigin
 argument_list|()
 argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|RetrieveOptions
+operator|.
+name|DIRMODE_TREE
+operator|.
+name|equals
+argument_list|(
+name|options
+operator|.
+name|getDirMode
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|ModuleRevisionId
+name|mRevId
+init|=
+name|artifact
+operator|.
+name|getArtifact
+argument_list|()
+operator|.
+name|getModuleRevisionId
+argument_list|()
 decl_stmt|;
+name|String
+name|org
+init|=
+name|mRevId
+operator|.
+name|getOrganisation
+argument_list|()
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
+name|mRevId
+operator|.
+name|getOrganisation
+argument_list|()
+operator|.
+name|replace
+argument_list|(
+literal|'.'
+argument_list|,
+literal|'/'
+argument_list|)
+decl_stmt|;
+name|destFileName
+operator|=
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
+name|destPattern
+argument_list|,
+name|org
+argument_list|,
+name|mRevId
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|mRevId
+operator|.
+name|getBranch
+argument_list|()
+argument_list|,
+name|mRevId
+operator|.
+name|getRevision
+argument_list|()
+argument_list|,
+name|artifact
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|artifact
+operator|.
+name|getType
+argument_list|()
+argument_list|,
+name|artifact
+operator|.
+name|getExt
+argument_list|()
+argument_list|,
+name|conf
+argument_list|,
+name|artifact
+operator|.
+name|getArtifactOrigin
+argument_list|()
+argument_list|,
+name|mrid
+operator|.
+name|getExtraAttributes
+argument_list|()
+argument_list|,
+name|artifact
+operator|.
+name|getArtifact
+argument_list|()
+operator|.
+name|getExtraAttributes
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Unsupported dirMode: "
+operator|+
+name|options
+operator|.
+name|getDirMode
+argument_list|()
+argument_list|)
+throw|;
+block|}
 name|Set
 name|dest
 init|=
