@@ -106,6 +106,22 @@ name|OVERWRITEMODE_DIFFERENT
 init|=
 literal|"different"
 decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DIRMODE_FLAT
+init|=
+literal|"flat"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DIRMODE_TREE
+init|=
+literal|"tree"
+decl_stmt|;
 comment|/**      * The names of configurations to retrieve. If the array consists only of '*', then all      * configurations of the module will be retrieved.      */
 specifier|private
 name|String
@@ -162,11 +178,50 @@ name|makeSymlinks
 init|=
 literal|false
 decl_stmt|;
+specifier|private
+name|String
+name|dirMode
+init|=
+name|DIRMODE_FLAT
+decl_stmt|;
 comment|/**      * The id used to store the resolve information.      */
 specifier|private
 name|String
 name|resolveId
 decl_stmt|;
+specifier|public
+name|String
+name|getDirMode
+parameter_list|()
+block|{
+return|return
+name|dirMode
+operator|==
+literal|null
+condition|?
+name|DIRMODE_FLAT
+else|:
+name|dirMode
+return|;
+block|}
+specifier|public
+name|RetrieveOptions
+name|setDirMode
+parameter_list|(
+name|String
+name|dirMode
+parameter_list|)
+block|{
+name|this
+operator|.
+name|dirMode
+operator|=
+name|dirMode
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
 specifier|public
 name|Filter
 name|getArtifactFilter
